--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
-baseurl: "/type-theme"
-url: "https://rohanchandra.github.io/"
+baseurl: 
+url: "https://ggory15.github.io/"
 
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
@@ -29,7 +29,7 @@ theme_settings:
   facebook:
   flickr:
   gitlab:
-  github: "rohanchandra/type-theme"
+  github: "ggory15/ggory15.github.io"
   google_plus:
   instagram:
   linkedin:  # Full URL
