--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@ url: "https://ggory15.github.io/"
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
   # Meta
-  title: Type Theme
+  title: Sanghyun Kim's Blog
   avatar: assets/img/avatar.png
   favicon: assets/favicon.ico
   gravatar: # Email MD5 hash
-  description: "A website with blog posts and pages" # used by search engines
+  description: "Sanghyun Kim's Blog" # used by search engines
 
   # Header and footer text
   header_text: >
@@ -29,7 +29,7 @@ theme_settings:
   facebook:
   flickr:
   gitlab:
-  github: "ggory15/ggory15.github.io"
+  github: "ggory15"
   google_plus:
   instagram:
   linkedin:  # Full URL
