--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ theme_settings:
 
   # Icons
   rss: false
-  email_address: # Full email address, e.g. "sam@example.com"
+  email_address: "ggory15@snu.ac.kr" # Full email address, e.g. "sam@example.com"
   behance:
   bitbucket:
   dribbble:
   facebook:
   flickr:
-  gitlab:
+  gitlab: "ggory15"
   github: "ggory15"
   google_plus:
   instagram:
@@ -39,9 +39,9 @@ theme_settings:
   stack_exchange:  # Full URL
   steam:
   tumblr:
-  twitter: "twitter"
+  twitter: 
   wordpress:
-  youtube:
+  youtube: "ggory15"
 
   # Scripts
   google_analytics: # Tracking ID, e.g. "UA-000000-01"
