--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun 
 user_title: Ph.d Candidate (Robotics)
 email: ggory15@snu.ac.kr
 #twitter_username: lorem_ipsum
-github_username: ggory15
-gplus_username:  ggory15
+github_username: "ggory15"
+gplus_username:  "ggory15"
 
 # Google-analytics
 google-analytics:
