--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
 title: Sanghyun Kim
-description: A blog about lorem ipsum dolor sit amet
+description: A blog about Sanghyun Kim a.k.a ggory15
 # baseurl: "/particle" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 username: Sanghyun Kim
-user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
+user_description: Hello, everyone. I am Sanghyun Kim in Dyros Lab at Seoul National University which is working on control and planning of both humanoid and mobile manipulator. My main interest topic is 
 user_title: Ph.d Candidate (Robotics)
 email: ggory15@snu.ac.kr
 #twitter_username: lorem_ipsum
