--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: A blog about Sanghyun Kim a.k.a ggory15
 
 # User settings
 username: Sanghyun Kim
-user_description: Hello, everyone. I am Sanghyun Kim in Dyros Lab at Seoul National University which is working on control and planning of both humanoid and mobile manipulator. My main interest topic is 
+user_description: 
 user_title: Ph.d Candidate (Robotics)
 email: ggory15@snu.ac.kr
 #twitter_username: lorem_ipsum
