--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: Sanghyun Kim
 description: A blog about Sanghyun Kim a.k.a ggory15
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "ggory15.github.io" # the base hostname & protocol for your site
+# baseurl: "/particle" # the subpath of your site, e.g. /blog
+# url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 username: Sanghyun Kim
