--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ description: A blog about Sanghyun Kim a.k.a ggory15
 # User settings
 username: Sanghyun Kim
 user_description: 
-user_title: Ph.d Candidate (Robotics)
-email: ggory15@snu.ac.kr
+user_title: Ph.d (Robotics)
+email: sanghyun.kim@ed.ac.uk
 #twitter_username: lorem_ipsum
 github_username: "ggory15"
 gplus_username:  "ggory15"
