--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: A blog about Sanghyun Kim a.k.a ggory15
 username: Sanghyun Kim
 user_description: 
 user_title: Ph.d (Robotics)
-email: sanghyun.kim@ed.ac.uk
+email: kim87@kimm.re.kr
 #twitter_username: lorem_ipsum
 github_username: "ggory15"
 gplus_username:  "ggory15"
